# FC_ESP32

./: .cproject  .project  CMakeLists.txt  CalibrationExport.csv  PinMapping.xlsx  README.md  VibrationCalcluation.xlsx  sdkconfig  sdkconfig.ci  sdkconfig.ci.old  sdkconfig.old  ~$VibrationCalcluation.xlsx
fc/fcCalibration/: CMakeLists.txt  calibration.c
fc/fcCommon/: CMakeLists.txt
fc/fcControl/: CMakeLists.txt
fc/fcDSP/: CMakeLists.txt  biQuadFilter.c  ewmaFilter.c  fft.c  highPassFilter.c  leakyIntegrationFilter.c  lowPassFilter.c
fc/fcDevices/: CMakeLists.txt
fc/fcManager/: CMakeLists.txt  fcManager.c
fc/fcManager/altitudeManager/: altitudeManager.c
fc/fcManager/attitudeManager/: attitudeManager.c
fc/fcManager/configManager/: configManager.c
fc/fcManager/debugManager/: debugManager.c
fc/fcManager/include/: altitudeManager.h  attitudeManager.h  configManager.h  cpuConfig.h  debugManager.h  fcManager.h  managerConfig.h  pwmManager.h  rcManager.h
fc/fcManager/pwmManager/: pwmManager.c
fc/fcManager/rcManager/: rcManager.c  rxRcManager.c  wifiRcManager.c
fc/fcSensors/: CMakeLists.txt
fc/fcSensors/altitude/: altitudeSensor.c
fc/fcSensors/attitude/: attitudeSensor.c
fc/fcSensors/config/: configSensor.c
fc/fcSensors/include/: altitudeSensor.h  attitudeSensor.h  configSensor.h  indicatorSensor.h  noiseSensor.h  pwmSensor.h  rcSensor.h
fc/fcSensors/indicator/: indicatorSensor.c
fc/fcSensors/noise/: noiseSensor.c
fc/fcSensors/pwm/: pwmSensor.c
fc/fcSensors/rc/: rcSensor.c  rxRcSensor.c  wifiRcSensor.c
main/: CMakeLists.txt  esp32fc.c
(+73 files in other folders)
